test/scc/stmt/semantic-errors/023.t
void test()
{
    for (extern int a;;);
}